# theNextWin32Socket

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  theNextWin32Socket.sln
include/: broadcastUDP.h  loginer.h  ptopTCP.h  socketBase.h  socketInformation.h  theNextThread.h
src/lib/: broadcastUDP.cpp  loginer.cpp  ptopTCP.cpp  socketBase.cpp  socketInformation.cpp  theNextThread.cpp
src/test/: TCP_test_client.cpp  TCP_test_server.cpp  UDP_test_client.cpp  UDP_test_server.cpp  socket_information_test.cpp  test_loginer.cpp  thread_test.cpp
theNextWin32Socket/: broadcaseUDP.cpp  broadcaseUDP.h  broadcastUDP.h  json.hpp  loginer.cpp  loginer.h  ptopTCP.cpp  ptopTCP.h  resource.h  socketBase.cpp  socketBase.h  socketInformation.cpp  socketInformation.h  stdafx.cpp  stdafx.h  theNextThread.cpp  theNextThread.h  theNextWin32Socket.cpp  theNextWin32Socket.vcxproj  theNextWin32Socket.vcxproj.filters
